# duckdb-extension-httpclient

./: CMakeLists.txt  Makefile  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
src/: http_client_extension.cpp
src/include/: http_client_extension.hpp
test/sql/: httpclient.test
